# cmip5-cmor-tables

./: .gitignore  Makefile.in  README.txt  RELEASE-NOTES  config.status  configure  configure.ac
Lib/: check_tables_okish.py  table_generator.py  tables_manip_tools.py
Tables/: CMIP5_3hr  CMIP5_6hrLev  CMIP5_6hrPlev  CMIP5_Amon  CMIP5_LImon  CMIP5_Lmon  CMIP5_OImon  CMIP5_Oclim  CMIP5_Omon  CMIP5_Oyr  CMIP5_aero  CMIP5_cf3hr  CMIP5_cfDay  CMIP5_cfMon  CMIP5_cfOff  CMIP5_cfSites  CMIP5_day  CMIP5_fx  CMIP5_grids  md5s
Tables_csv/: 3hr.csv  6hrLev.csv  6hrPlev.csv  Amon.csv  Amon_2D.csv  CFMIP.csv  LImon.csv  Lmon.csv  OImon.csv  Oclim.csv  Omon.csv  Oyr.csv  Oyr_tracer.csv  add_dims.txt  add_dims2.txt  add_dims2_notime.txt  aero.csv  amon.csv  amon_2D.csv  cf3hr.csv  cfDay.csv  cfMon.csv  cfOff.csv  cfSites.csv  cfsites.csv  day.csv  dims.csv  fx.csv  general.csv  lmon.csv  minmax.pickled  oclim.csv  omon.csv  other.csv  oyr.csv  oyr_tracer.csv  standard_output.xls  standard_output.xlsx
